# 5607_hw2

./: .gitignore  CMakeLists.txt  README.md  ray.txt  rayTracer.cpp
archive/: Makefile
archive/ParsingExamples/: parseFile2.cpp
scenes/: bear.scn  cameraSceneTest.scn  env.scn  scene1.scn  scene2.scn  sceneP.scn  scene_r.scn  spheres_no_spec.scn  triangle.scn
scenes/SphereExamples/: spheres1.scn
scenes/Test-Scenes/: gear.scn
scenes/Triangles/: test_reasonable.scn  triangle.scn
src/: bvh.cpp  bvh2.cpp  camera.cpp  image.cpp  main.cpp  parser.cpp  rayTracer.cpp  sampling.txt
src/include/: bvh.h  bvh2.h  camera.h  canvas.h  image.h  lights.h  material.h  parser.h  ray.h  rayTracer.h  shapes.h  statusReporter.h  utils.h
